# FFaudio

./: CMakeLists.txt  clock_utils.c  clock_utils.h  cmdutils.c  cmdutils.h  decoder_utils.c  decoder_utils.h  ffaudio.c  ffaudio.h  filtergraph.c  filtergraph.h  frame_queue_utils.c  frame_queue_utils.h  main.c  packet_queue_utils.c  packet_queue_utils.h  readme.md  test.c  test.cpp
lib/: clock_utils.c  clock_utils.h  cmdutils.c  cmdutils.h  decoder_utils.c  decoder_utils.h  delagates.h  delegates.h  ffaudio.c  ffaudio.h  filtergraph.c  filtergraph.h  frame_queue_utils.c  frame_queue_utils.h  globals.h  packet_queue_utils.c  packet_queue_utils.h
tests/: test.c
